--- a/public/stat120/Day2.html
+++ b/public/stat120/Day2.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- September 13 2023
+ January 04 2024
 
 ---
 
@@ -124,7 +124,7 @@ sample to the population
 
 --
 
-.green-h.center[To eliminate sampling bias always take a RANDOM SAMPLE!]
+.center.bold.font140[To eliminate sampling bias always take a .red[RANDOM SAMPLE!]]
 
 ---
 
@@ -190,18 +190,16 @@ class: action, middle
 .pull-right-60[
 &lt;br&gt;
 &lt;br&gt;
+&lt;br&gt;
 .bql[
 
-Go to 
-
-  * [google form for section 01](https://forms.gle/H5bwYijgoZ1B2xco7)
-  * [google form for section 02](https://forms.gle/Cj2x7xv8iubsFzaa9)
+Go to the  [google form](https://forms.gle/rmKmHPbRoFbWEGXg7)
 
 Find the average word length and enter your answer
 ]
 ]
 
-<div class="countdown" id="timer_e92fc4cf" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_be1f986d" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -340,13 +338,12 @@ class: action, middle
 &lt;br&gt;
 .bq.font80[
 
-- Identify one source of bias based on [The Effect of Question Order on Evaluations of Test Performance: Can the Bias Dissolve?](https://journals.sagepub.com/doi/full/10.1080/17470218.2016.1225108)
-
-- (Time permitting) Go over to [moodle](https://moodle.carleton.edu/login/index.php) to get the practice_template.Rmd file and work on a few problems together
+- Go over to [moodle](https://moodle.carleton.edu/course/view.php?id=43041) to get the `class-activity-2.Rmd` file and work on a few problems together
+- Submit the .pdf file by the deadline
 ]
 ]
 
-<div class="countdown" id="timer_dd32df33" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_ed81942a" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
