--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -52,7 +52,8 @@
   
     
   
-  <meta name="description" content="Day 1 Slides (html)" />
+  <meta name="description" content="Day 1 Slides (html)
+Day 2 Slides (html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat220/week1/" />
@@ -296,7 +297,8 @@
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="/courses/stat220/week1/" />
   <meta property="og:title" content="Week 1 | Deepak Bastola" />
-  <meta property="og:description" content="Day 1 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Day 1 Slides (html)
+Day 2 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -801,10 +803,8 @@
 
           <div class="article-style">
             <p>Day 1 Slides (<a href="/stat220/Day1.html" target="_blank">html</a>)</p>
+<p>Day 2 Slides (<a href="/stat220/Day2.html" target="_blank">html</a>)</p>
 <!--
-
-
-Day 2 Slides (<a href="/stat220/Day2.pdf" target="_blank">pdf</a>/<a href="/stat220/Day2.html" target="_blank">html</a>)
 
 Day 3 Slides (<a href="/stat220/Day3.pdf" target="_blank">pdf</a>/<a href="/stat220/Day3.html" target="_blank">html</a>)
 
