--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -52,7 +52,7 @@
   
     
   
-  <meta name="description" content=" " />
+  <meta name="description" content="Day 3 Slides (html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat220/week2/" />
@@ -296,7 +296,7 @@
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="/courses/stat220/week2/" />
   <meta property="og:title" content="Week 2 | Deepak Bastola" />
-  <meta property="og:description" content=" " /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Day 3 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -800,7 +800,8 @@
           <h1>Week 2</h1>
 
           <div class="article-style">
-            <!--
+            <p>Day 3 Slides (<a href="/stat220/Day3.html" target="_blank">html</a>)</p>
+<!--
 
 Day 4 Slides (<a href="/stat220/Day4.pdf" target="_blank">pdf</a>/<a href="/stat220/Day4.html" target="_blank">html</a>)
 
