--- a/public/stat120/Day3.html
+++ b/public/stat120/Day3.html
@@ -51,7 +51,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- September 15 2023
+ January 07 2024
 
 ---
 
@@ -268,6 +268,7 @@ different treatment to each group
 
 ---
 
+
 # Exercise and the Brain
 
 .bql[
@@ -280,12 +281,49 @@ then breezed through mazes and other tests of rodent IQ"
 compared to the sedentary mice
 ]
 
---
+.footnote[Reynolds, "Phys Ed: Your Brain on Exercise", NY Times, July 7, 2010]
 
-Is this evidence that exercise causes an increase in brain
-activity and IQ, at least in mice?
 
---
+---
+
+# Exercise and the Brain
+
+.bql[
+- A sample of mice were divided randomly into two groups. One
+group was given access to an exercise wheel, the other group
+was kept sedentary
+- "The brains of mice and rats that were allowed to run on wheels
+pulsed with vigorous, newly born neurons, and those animals
+then breezed through mazes and other tests of rodent IQ"
+compared to the sedentary mice
+]
+
+
+
+.hljs[Is this evidence that exercise causes an increase in brain
+activity and IQ, at least in mice?]
+
+.footnote[Reynolds, "Phys Ed: Your Brain on Exercise", NY Times, July 7, 2010]
+
+---
+
+# Exercise and the Brain
+
+.bql[
+- A sample of mice were divided randomly into two groups. One
+group was given access to an exercise wheel, the other group
+was kept sedentary
+- "The brains of mice and rats that were allowed to run on wheels
+pulsed with vigorous, newly born neurons, and those animals
+then breezed through mazes and other tests of rodent IQ"
+compared to the sedentary mice
+]
+
+
+
+.hljs[Is this evidence that exercise causes an increase in brain
+activity and IQ, at least in mice?]
+
 
 .center.out-t[Randomized experiment can yield causal conclusions!]
 
@@ -293,6 +331,7 @@ activity and IQ, at least in mice?
 .footnote[Reynolds, "Phys Ed: Your Brain on Exercise", NY Times, July 7, 2010]
 
 ---
+
 
 # Knee Surgery, Control Groups
 
@@ -440,15 +479,16 @@ class: action, middle
 .pull-right-60[
 &lt;br&gt;
 &lt;br&gt;
-.bq[
+.bq.font90[
 
-- Let's head over to [course helper page](https://stat120-fall23.netlify.app/) to see some case studies
+- Let's head over to [course helper page](https://stat120-winter24.netlify.app/) to see some case studies
 - Then we will work on a class activity
+- Submit the class activity by the deadline
 ]
 ]
 
 
-<div class="countdown" id="timer_ea5478f0" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_469a2615" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
