--- a/public/stat120/Day3.html
+++ b/public/stat120/Day3.html
@@ -239,7 +239,7 @@ class: middle
 
 # Randomized Experiments
 
-.bql[
+.bql.font90[
 - In a .b[randomized experiment], the explanatory variable for each
 unit is determined randomly, before the response variable is
 measured
@@ -341,7 +341,6 @@ activity and IQ, at least in mice?]
 - Patients who underwent surgery reported less pain.
 ]
 
-&lt;br&gt;
 --
 
 .bql[### The Importance of a Control Group
@@ -418,7 +417,7 @@ class: middle
 
 ---
 
-# Variations of matched pairs experiments: `Effectiveness of a training program`
+# Variations of matched pairs experiments: `Training program effectiveness`
 
 .pull-left[## Before-After Test: 
 .bq.font80[
@@ -488,7 +487,7 @@ class: action, middle
 ]
 
 
-<div class="countdown" id="timer_469a2615" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_3c98a4d0" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
