--- a/public/stat120/Day5.html
+++ b/public/stat120/Day5.html
@@ -48,11 +48,11 @@ class: title-slide, middle
 background-position: 10% 90%, 100% 50%
 background-size: 160px, 100% 100%
 
-# .fancy[Describing Variables]
+# .fancy[Describing Quantitative Variables]
 
 ### .fancy[Stat 120]
 
- September 20 2023
+ January 11 2024
 
 ---
 
@@ -583,18 +583,14 @@ ggplot(survey, aes(x=Pulse)) +
 # Create boxplots using facet_wrap()
 ggplot(survey, aes(x = Smoke, y = Pulse)) +
   geom_boxplot() +
-  facet_wrap(~ Smoke, scales = "free_x") +
   labs(x = "Smoking Status", y = "Pulse Rate")
+
 ```
 ]
 
 ]
 
-
-
 ---
-
-
 
 class: action
 
@@ -610,12 +606,12 @@ class: action
 &lt;br&gt;
 .bq[
 
-- Let's head over to the [course helper page](https://stat120-fall23.netlify.app/) to see some more examples 
+- Let's head over to the [course helper page](https://stat120-winter24.netlify.app/) to see some more examples 
 - We will then do a class activity together
 ]
 ]
 
-<div class="countdown" id="timer_81fd653a" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_5f42d20e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
