--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -53,7 +53,8 @@
     
   
   <meta name="description" content="Day 3 Slides (html)
-Day 4 Slides (html)" />
+Day 4 Slides (html)
+Day 5 Slides (html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat220/week2/" />
@@ -298,7 +299,8 @@ Day 4 Slides (html)" />
   <meta property="og:url" content="/courses/stat220/week2/" />
   <meta property="og:title" content="Week 2 | Deepak Bastola" />
   <meta property="og:description" content="Day 3 Slides (html)
-Day 4 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Day 4 Slides (html)
+Day 5 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -804,6 +806,7 @@ Day 4 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b
           <div class="article-style">
             <p>Day 3 Slides (<a href="/stat220/Day3.html" target="_blank">html</a>)</p>
 <p>Day 4 Slides (<a href="/stat220/Day4.html" target="_blank">html</a>)</p>
+<p>Day 5 Slides (<a href="/stat220/Day5.html" target="_blank">html</a>)</p>
 
           </div>
 
