--- a/public/stat220/Day5.html
+++ b/public/stat220/Day5.html
@@ -43,38 +43,9 @@ class: title-slide, middle
 
 # .fancy[More Data Visualization Tools]
 
-### .fancy[Spring 2023]
+### .fancy[Stat 220]
 
- April 04 2023
-
----
-
-class: middle
-
-# So far ..
-
-.bql.font90[.b[We know]
-
-- A basic set of geometries
-- How to map variables to aesthetics
-- How to layer `geoms`
-- How to change axis labels and titles
-- Common statistical graphs
-]
-
-
----
-
-class: middle
-
-# More to learn ...
-
-.bql.font90[.b[Today]
-- Changing scales
-- Changing coordinates
-- Mapping spatial data
-]
-
+ January 11 2024
 
 ---
 
@@ -117,9 +88,13 @@ class: middle
 
 - [Using colors in R](http://stat545.com/block018_colors.html)
 
+- [Dealing with colors in ggplot2](https://r-graph-gallery.com/ggplot2-color.html)
+
 - [Taking control of qualitative colors in ggplot2](http://stat545.com/block019_enforce-color-scheme.html)
 
 - [Data journalism](https://datajournalism.com/read/)
+
+- [R Color Brewer](https://colorbrewer2.org/#type=sequential&amp;scheme=BuGn&amp;n=3)
 
 ]
 
@@ -211,32 +186,6 @@ ggplot(data) +
 ]
 ]
 ]
-
----
-
-
-class: action, middle
-
-# &lt;i class="fa fa-pencil-square-o" style="font-size:48px;color:purple"&gt;&amp;nbsp;Group&amp;nbsp;Activity&amp;nbsp;1&lt;/i&gt;    
-
-
-.pull-left-40[
-![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
-]
-.pull-right-60[
-&lt;br&gt;
-.bql.font80[
-- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=41417)
-- Get the class activity 5 .Rmd file
-- Work on Problem 1
-- Ask me questions
-]
-]
-
-<div class="countdown" id="timer_835d5218" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
-<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">06</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
-</div>
 
 
 ---
@@ -395,106 +344,26 @@ ggplot(states, aes(x=long, y=lat, group=group)) +
 
 ---
 
-count: false
- 
-## Why is scale so important in a map?
-.panel1-scale-auto[
-
-```r
-*ggplot(states, aes(x=long, y=lat, group=group))
-```
-]
- 
-.panel2-scale-auto[
-&lt;img src="Day5_files/figure-html/scale_auto_01_output-1.svg" width="100%" /&gt;
-]
-
----
-count: false
- 
-## Why is scale so important in a map?
-.panel1-scale-auto[
-
-```r
-ggplot(states, aes(x=long, y=lat, group=group)) +
-*   geom_polygon(color="black", fill="lightblue")
-```
-]
- 
-.panel2-scale-auto[
-&lt;img src="Day5_files/figure-html/scale_auto_02_output-1.svg" width="100%" /&gt;
-]
-
----
-count: false
- 
-## Why is scale so important in a map?
-.panel1-scale-auto[
-
-```r
-ggplot(states, aes(x=long, y=lat, group=group)) +
-    geom_polygon(color="black", fill="lightblue") +
-*   coord_fixed(ratio=3)
-```
-]
- 
-.panel2-scale-auto[
-&lt;img src="Day5_files/figure-html/scale_auto_03_output-1.svg" width="100%" /&gt;
-]
-
-&lt;style&gt;
-.panel1-scale-auto {
-  color: black;
-  width: 49%;
-  hight: 32%;
-  float: left;
-  padding-left: 1%;
-  font-size: 70%
-}
-.panel2-scale-auto {
-  color: black;
-  width: 49%;
-  hight: 32%;
-  float: left;
-  padding-left: 1%;
-  font-size: 70%
-}
-.panel3-scale-auto {
-  color: black;
-  width: NA%;
-  hight: 33%;
-  float: left;
-  padding-left: 1%;
-  font-size: 70%
-}
-&lt;/style&gt;
-
-
-
-
-
----
-
-# Covid mapping
+# Application: Covid mapping
 
 
 ```
 Rows: 51
 Columns: 7
 $ State                                  &lt;chr&gt; "Alabama", "Alaska", "Arizona",…
-$ `7-day avg. cases`                     &lt;int&gt; 294, 0, 465, 0, 173, 320, 147, …
-$ `7-day avg. deaths`                    &lt;int&gt; 1, 0, 0, 0, 0, 7, 0, 0, 0, 0, 3…
-$ Cases                                  &lt;chr&gt; "1,650,449", "285,075", "2,454,…
-$ Deaths                                 &lt;chr&gt; "21,127", "1,441", "29,852", "1…
-$ `7-day avg. hospitalizations`          &lt;int&gt; 41, 10, 172, 70, 612, 100, 42, …
-$ `7-day avg. hospitalizations per 100k` &lt;dbl&gt; 0.8, 1.0, 2.0, 2.0, 1.0, 1.0, 1…
+$ `7-day avg. cases`                     &lt;int&gt; 0, 0, 0, 0, 128, 0, 0, 13, 0, 0…
+$ `7-day avg. deaths`                    &lt;int&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0…
+$ Cases                                  &lt;chr&gt; "1,659,936", "287,319", "2,486,…
+$ Deaths                                 &lt;chr&gt; "21,138", "1,457", "29,852", "1…
+$ `7-day avg. hospitalizations`          &lt;int&gt; 30, 4, 152, 30, 377, 92, 20, 83…
+$ `7-day avg. hospitalizations per 100k` &lt;dbl&gt; 0.6, 0.6, 2.0, 1.0, 1.0, 1.0, 0…
 ```
 
 .footnote[Source: https://usafacts.org/visualizations/coronavirus-covid-19-spread-map/]
 
 ---
 
-# Combining datasets
+# Application: Combining datasets
 
 We need to add the covid info to the state polygon data set
 
@@ -507,17 +376,17 @@ covid_data &lt;- left_join(states, covid_clean, by = c("region" = "state"))
 
 ```
 # A tibble: 15,537 × 12
-   long   lat group order region  subreg…¹ x7_da…² x7_da…³  cases deaths x7_da…⁴
-  &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;int&gt; &lt;chr&gt;   &lt;chr&gt;      &lt;int&gt;   &lt;int&gt;  &lt;dbl&gt;  &lt;dbl&gt;   &lt;int&gt;
-1 -87.5  30.4     1     1 alabama &lt;NA&gt;         294       1 1.65e6  21127      41
-2 -87.5  30.4     1     2 alabama &lt;NA&gt;         294       1 1.65e6  21127      41
-3 -87.5  30.4     1     3 alabama &lt;NA&gt;         294       1 1.65e6  21127      41
-4 -87.5  30.3     1     4 alabama &lt;NA&gt;         294       1 1.65e6  21127      41
-5 -87.6  30.3     1     5 alabama &lt;NA&gt;         294       1 1.65e6  21127      41
-# … with 15,532 more rows, 1 more variable:
-#   x7_day_avg_hospitalizations_per_100k &lt;dbl&gt;, and abbreviated variable names
-#   ¹​subregion, ²​x7_day_avg_cases, ³​x7_day_avg_deaths,
-#   ⁴​x7_day_avg_hospitalizations
+   long   lat group order region  subregion x7_day_avg_cases x7_day_avg_deaths
+  &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;int&gt; &lt;chr&gt;   &lt;chr&gt;                &lt;int&gt;             &lt;int&gt;
+1 -87.5  30.4     1     1 alabama &lt;NA&gt;                     0                 0
+2 -87.5  30.4     1     2 alabama &lt;NA&gt;                     0                 0
+3 -87.5  30.4     1     3 alabama &lt;NA&gt;                     0                 0
+4 -87.5  30.3     1     4 alabama &lt;NA&gt;                     0                 0
+5 -87.6  30.3     1     5 alabama &lt;NA&gt;                     0                 0
+# ℹ 15,532 more rows
+# ℹ 4 more variables: cases &lt;dbl&gt;, deaths &lt;dbl&gt;,
+#   x7_day_avg_hospitalizations &lt;int&gt;,
+#   x7_day_avg_hospitalizations_per_100k &lt;dbl&gt;
 ```
 
 ---
@@ -588,7 +457,6 @@ ggplot(covid_data) +
 
 ---
 
-
 # Cloropleth maps
 
 .bq.font90[
@@ -636,7 +504,7 @@ ggplot(data=ACS) + coord_map() +
 
 class: action, middle
 
-# &lt;i class="fa fa-pencil-square-o" style="font-size:48px;color:purple"&gt;&amp;nbsp;Group&amp;nbsp;Activity&amp;nbsp;2&lt;/i&gt;    
+# &lt;i class="fa fa-pencil-square-o" style="font-size:48px;color:purple"&gt;&amp;nbsp;Group&amp;nbsp;Activity&amp;nbsp;1&lt;/i&gt;    
 
 
 .pull-left-40[
@@ -645,16 +513,17 @@ class: action, middle
 .pull-right-60[
 &lt;br&gt;
 &lt;br&gt;
-.bql.font90[
-- Please work on the remaining problems 
-- Please feel free to talk to me or your neighbor
-- Submit a pdf to moodle when done
+.bql.font80[
+- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=43045)
+- Get the class activity 5 .Rmd file
+- Work on the class activity together
+- Ask me questions
 ]
 ]
 
-<div class="countdown" id="timer_270a69a1" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_6b7880c4" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
     </textarea>
