--- a/static/stat120/Day7.html
+++ b/static/stat120/Day7.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- September 25 2023
+ January 11 2024
 
 ---
 
@@ -417,7 +417,7 @@ Please go over the class activity and [class helper page](https://stat120-fall23
 ]
 ]
 
-<div class="countdown" id="timer_95a8df8a" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_3c1603c9" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
