--- a/public/stat220/Day5.html
+++ b/public/stat220/Day5.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- January 11 2024
+ January 12 2024
 
 ---
 
@@ -156,7 +156,7 @@ Examples:
 
 ]
 
-.footnote[Click for various basic [ggplot2 themes](https://ggplot2.tidyverse.org/reference/ggtheme.html)  and for [ggthemes](https://mran.microsoft.com/snapshot/2017-02-04/web/packages/ggthemes/vignettes/ggthemes.html)]
+.footnote[Click for various basic [ggplot2 themes](https://ggplot2.tidyverse.org/reference/ggtheme.html)  and for [ggthemes](https://yutannihilation.github.io/allYourFigureAreBelongToUs/ggthemes/)]
 
 ---
 
@@ -521,7 +521,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_6b7880c4" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_9d904cd7" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
