--- a/public/stat120/Day7.html
+++ b/public/stat120/Day7.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- January 11 2024
+ January 16 2024
 
 ---
 
@@ -412,12 +412,12 @@ class: action
 &lt;br&gt;
 .bq[
 
-Please go over the class activity and [class helper page](https://stat120-fall23.netlify.app/) and let me know if you have any questions.
+Please go over the class activity and [class helper page](https://stat120-winter24.netlify.app/) and let me know if you have any questions.
 
 ]
 ]
 
-<div class="countdown" id="timer_3c1603c9" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_195320e0" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
