--- a/public/stat220/Day7.html
+++ b/public/stat220/Day7.html
@@ -48,7 +48,7 @@ class: title-slide, middle
 
 ### .fancy[Spring 2023]
 
- April 10 2023
+ January 16 2024
 
 ---
 
@@ -207,7 +207,7 @@ class: action, middle
 &lt;br&gt;
 
 .bql.font80[
-- Let's go over to [moodle](https://moodle.carleton.edu/course/view.php?id=41417)
+- Let's go over to [moodle](https://moodle.carleton.edu/course/view.php?id=43045)
 - Get the class activity 7.Rmd file
 - Work on problem 1
 ]
@@ -218,7 +218,7 @@ class: action, middle
 ]
 
 
-<div class="countdown" id="timer_8ab9e393" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_5500afc3" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -286,6 +286,7 @@ df2 &lt;- tibble(x = c(3, 1), a = 10, b = "a")
 
 .pull-left[
 
+
 Table: df1
 
 |  x|  y|
@@ -294,9 +295,12 @@ Table: df1
 |  2|  1|
 
 
+
+
 ```r
 df1 %&gt;% left_join(df2)
 ```
+
 
 
 
@@ -307,10 +311,13 @@ df1 %&gt;% left_join(df2)
 |  2|  1| NA|NA |
 
 
+
+
 ]
 
 
 .pull-right[
+
 
 
 Table: df2
@@ -322,9 +329,12 @@ Table: df2
 
 
 
+
+
 ```r
 df2 %&gt;% left_join(df1)
 ```
+
 
 
 
@@ -332,6 +342,8 @@ df2 %&gt;% left_join(df1)
 |--:|--:|:--|--:|
 |  3| 10|a  | NA|
 |  1| 10|a  |  2|
+
+
 
 ]
 
@@ -349,6 +361,7 @@ df2 &lt;- tibble(x = c(3, 1), a = 10, b = "a")
 .pull-left[
 
 
+
 Table: df1
 
 |  x|  y|
@@ -358,9 +371,12 @@ Table: df1
 
 
 
+
+
 ```r
 df1 %&gt;% right_join(df2)
 ```
+
 
 
 
@@ -369,9 +385,12 @@ df1 %&gt;% right_join(df2)
 |  1|  2| 10|a  |
 |  3| NA| 10|a  |
 
+
+
 ]
 
 .pull-right[
+
 
 
 Table: df2
@@ -383,15 +402,20 @@ Table: df2
 
 
 
+
+
 ```r
 df2 %&gt;% right_join(df1)
 ```
+
 
 
 |  x|  a|b  |  y|
 |--:|--:|:--|--:|
 |  1| 10|a  |  2|
 |  2| NA|NA |  1|
+
+
 
 ]
 
@@ -407,14 +431,18 @@ df2 &lt;- tibble(x = c(3, 1), a = 10, b = "a")
 
 .pull-left[
 
+
 Table: df1
 
 |  x|  y|
 |--:|--:|
 |  1|  2|
 |  2|  1|
+
+
 ]
 .pull-right[
+
 
 Table: df2
 
@@ -422,6 +450,8 @@ Table: df2
 |--:|--:|:--|
 |  3| 10|a  |
 |  1| 10|a  |
+
+
 ]
 
 &lt;br&gt;
@@ -432,9 +462,12 @@ df1 %&gt;% inner_join(df2)
 ```
 
 
+
 |  x|  y|  a|b  |
 |--:|--:|--:|:--|
 |  1|  2| 10|a  |
+
+
 
 
 ---
@@ -512,7 +545,7 @@ flights2 %&gt;%
  8  2013     1     1     6 LGA    IAD   N829AS  EV      ExpressJet Airlines Inc.
  9  2013     1     1     6 JFK    MCO   N593JB  B6      JetBlue Airways         
 10  2013     1     1     6 LGA    ORD   N3ALAA  AA      American Airlines Inc.  
-# … with 336,766 more rows
+# ℹ 336,766 more rows
 ```
 
 ---
@@ -525,15 +558,14 @@ class: middle
 ```r
 head(planes)
 # A tibble: 6 × 9
-  tailnum  year type                    manuf…¹ model engines seats speed engine
-  &lt;chr&gt;   &lt;int&gt; &lt;chr&gt;                   &lt;chr&gt;   &lt;chr&gt;   &lt;int&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt; 
-1 N10156   2004 Fixed wing multi engine EMBRAER EMB-…       2    55    NA Turbo…
-2 N102UW   1998 Fixed wing multi engine AIRBUS… A320…       2   182    NA Turbo…
-3 N103US   1999 Fixed wing multi engine AIRBUS… A320…       2   182    NA Turbo…
-4 N104UW   1999 Fixed wing multi engine AIRBUS… A320…       2   182    NA Turbo…
-5 N10575   2002 Fixed wing multi engine EMBRAER EMB-…       2    55    NA Turbo…
-6 N105UW   1999 Fixed wing multi engine AIRBUS… A320…       2   182    NA Turbo…
-# … with abbreviated variable name ¹​manufacturer
+  tailnum  year type               manufacturer model engines seats speed engine
+  &lt;chr&gt;   &lt;int&gt; &lt;chr&gt;              &lt;chr&gt;        &lt;chr&gt;   &lt;int&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt; 
+1 N10156   2004 Fixed wing multi … EMBRAER      EMB-…       2    55    NA Turbo…
+2 N102UW   1998 Fixed wing multi … AIRBUS INDU… A320…       2   182    NA Turbo…
+3 N103US   1999 Fixed wing multi … AIRBUS INDU… A320…       2   182    NA Turbo…
+4 N104UW   1999 Fixed wing multi … AIRBUS INDU… A320…       2   182    NA Turbo…
+5 N10575   2002 Fixed wing multi … EMBRAER      EMB-…       2    55    NA Turbo…
+6 N105UW   1999 Fixed wing multi … AIRBUS INDU… A320…       2   182    NA Turbo…
 ```
 
 
@@ -547,21 +579,21 @@ class: middle
 ```r
 flights2 %&gt;% left_join(planes, by = "tailnum")
 # A tibble: 336,776 × 16
-   year.x month   day  hour origin dest  tailnum carrier year.y type     manuf…¹
-    &lt;int&gt; &lt;int&gt; &lt;int&gt; &lt;dbl&gt; &lt;chr&gt;  &lt;chr&gt; &lt;chr&gt;   &lt;chr&gt;    &lt;int&gt; &lt;chr&gt;    &lt;chr&gt;  
- 1   2013     1     1     5 EWR    IAH   N14228  UA        1999 Fixed w… BOEING 
- 2   2013     1     1     5 LGA    IAH   N24211  UA        1998 Fixed w… BOEING 
- 3   2013     1     1     5 JFK    MIA   N619AA  AA        1990 Fixed w… BOEING 
- 4   2013     1     1     5 JFK    BQN   N804JB  B6        2012 Fixed w… AIRBUS 
- 5   2013     1     1     6 LGA    ATL   N668DN  DL        1991 Fixed w… BOEING 
- 6   2013     1     1     5 EWR    ORD   N39463  UA        2012 Fixed w… BOEING 
- 7   2013     1     1     6 EWR    FLL   N516JB  B6        2000 Fixed w… AIRBUS…
- 8   2013     1     1     6 LGA    IAD   N829AS  EV        1998 Fixed w… CANADA…
- 9   2013     1     1     6 JFK    MCO   N593JB  B6        2004 Fixed w… AIRBUS 
-10   2013     1     1     6 LGA    ORD   N3ALAA  AA          NA &lt;NA&gt;     &lt;NA&gt;   
-# … with 336,766 more rows, 5 more variables: model &lt;chr&gt;, engines &lt;int&gt;,
-#   seats &lt;int&gt;, speed &lt;int&gt;, engine &lt;chr&gt;, and abbreviated variable name
-#   ¹​manufacturer
+   year.x month   day  hour origin dest  tailnum carrier year.y type            
+    &lt;int&gt; &lt;int&gt; &lt;int&gt; &lt;dbl&gt; &lt;chr&gt;  &lt;chr&gt; &lt;chr&gt;   &lt;chr&gt;    &lt;int&gt; &lt;chr&gt;           
+ 1   2013     1     1     5 EWR    IAH   N14228  UA        1999 Fixed wing mult…
+ 2   2013     1     1     5 LGA    IAH   N24211  UA        1998 Fixed wing mult…
+ 3   2013     1     1     5 JFK    MIA   N619AA  AA        1990 Fixed wing mult…
+ 4   2013     1     1     5 JFK    BQN   N804JB  B6        2012 Fixed wing mult…
+ 5   2013     1     1     6 LGA    ATL   N668DN  DL        1991 Fixed wing mult…
+ 6   2013     1     1     5 EWR    ORD   N39463  UA        2012 Fixed wing mult…
+ 7   2013     1     1     6 EWR    FLL   N516JB  B6        2000 Fixed wing mult…
+ 8   2013     1     1     6 LGA    IAD   N829AS  EV        1998 Fixed wing mult…
+ 9   2013     1     1     6 JFK    MCO   N593JB  B6        2004 Fixed wing mult…
+10   2013     1     1     6 LGA    ORD   N3ALAA  AA          NA &lt;NA&gt;            
+# ℹ 336,766 more rows
+# ℹ 6 more variables: manufacturer &lt;chr&gt;, model &lt;chr&gt;, engines &lt;int&gt;,
+#   seats &lt;int&gt;, speed &lt;int&gt;, engine &lt;chr&gt;
 ```
 
 ---
@@ -587,8 +619,8 @@ flights2 %&gt;% left_join(airports, by = c("origin" = "faa"))
  8  2013     1     1     6 LGA    IAD   N829AS  EV      La Gu…  40.8 -73.9    22
  9  2013     1     1     6 JFK    MCO   N593JB  B6      John …  40.6 -73.8    13
 10  2013     1     1     6 LGA    ORD   N3ALAA  AA      La Gu…  40.8 -73.9    22
-# … with 336,766 more rows, and 3 more variables: tz &lt;dbl&gt;, dst &lt;chr&gt;,
-#   tzone &lt;chr&gt;
+# ℹ 336,766 more rows
+# ℹ 3 more variables: tz &lt;dbl&gt;, dst &lt;chr&gt;, tzone &lt;chr&gt;
 ```
 
 
@@ -625,6 +657,7 @@ Filtering joins return a copy of the dataset that has been filtered, not augment
 
 .pull-left[
 
+
 Table: df1
 
 |  x|  y|
@@ -635,9 +668,12 @@ Table: df1
 |  4|  4|
 
 
+
+
 ```r
 df1 %&gt;% semi_join(df2, by = "x")
 ```
+
 
 
 |  x|  y|
@@ -645,8 +681,11 @@ df1 %&gt;% semi_join(df2, by = "x")
 |  1|  1|
 |  1|  2|
 
+
+
 ]
 .pull-right[
+
 
 Table: df2
 
@@ -656,6 +695,8 @@ Table: df2
 |  1|b  |
 |  2|a  |
 
+
+
 &lt;br&gt;
 
 
@@ -664,10 +705,13 @@ df2 %&gt;% semi_join(df1, by = "x")
 ```
 
 
+
 |  x|z  |
 |--:|:--|
 |  1|a  |
 |  1|b  |
+
+
 
 ]
 
@@ -678,6 +722,7 @@ df2 %&gt;% semi_join(df1, by = "x")
 
 .pull-left[
 
+
 Table: df1
 
 |  x|  y|
@@ -688,9 +733,12 @@ Table: df1
 |  4|  4|
 
 
+
+
 ```r
 df1 %&gt;% anti_join(df2, by = "x")
 ```
+
 
 
 |  x|  y|
@@ -698,8 +746,11 @@ df1 %&gt;% anti_join(df2, by = "x")
 |  3|  3|
 |  4|  4|
 
+
+
 ]
 .pull-right[
+
 
 Table: df2
 
@@ -709,6 +760,8 @@ Table: df2
 |  1|b  |
 |  2|a  |
 
+
+
 &lt;br&gt;
 
 
@@ -717,9 +770,12 @@ df2 %&gt;% anti_join(df1, by = "x")
 ```
 
 
+
 |  x|z  |
 |--:|:--|
 |  2|a  |
+
+
 
 ]
 
@@ -748,7 +804,8 @@ df2 %&gt;% anti_join(df1, by = "x")
 
 
 
-.pull-left.code80[
+.pull-left.code70[
+
 
 
 
@@ -760,9 +817,12 @@ Table: df1
 |  2|  1|
 
 
+
+
 ```r
 intersect(df1, df2))
 ```
+
 
 
 |  x|  y|
@@ -771,17 +831,23 @@ intersect(df1, df2))
 
 
 
+
+
 ```r
 setdiff(df1, df2))
 ```
+
 
 
 |  x|  y|
 |--:|--:|
 |  2|  1|
 
+
+
 ]
 .pull-right.font70[
+
 
 
 
@@ -795,9 +861,12 @@ Table: df2
 
 
 
+
+
 ```r
 union(df1, df2))
 ```
+
 
 
 |  x|  y|
@@ -807,14 +876,19 @@ union(df1, df2))
 |  2|  2|
 
 
+
+
 ```r
 setdiff(df2, df1))
 ```
 
 
+
 |  x|  y|
 |--:|--:|
 |  2|  2|
+
+
 
 ]
 
@@ -837,7 +911,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_4da8f86a" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_2db7ab75" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
