--- a/static/stat220/Day6.html
+++ b/static/stat220/Day6.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- January 15 2024
+ January 16 2024
 
 ---
 
@@ -480,7 +480,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_c3104cdb" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_2eafa507" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -661,21 +661,21 @@ class: middle
 babynames %&gt;%
   filter(name == "Aaron", sex == "M") %&gt;%
   arrange(year) %&gt;%
+  ungroup() %&gt;% # mentioned later in the slides
   mutate(change_in_n = if_else(row_number() == 1, n, n - lag(n, 1, default = n[1])))
 # A tibble: 138 × 7
-# Groups:   year [138]
     year sex   name      n     prop percent change_in_n
    &lt;dbl&gt; &lt;chr&gt; &lt;chr&gt; &lt;int&gt;    &lt;dbl&gt;   &lt;dbl&gt;       &lt;int&gt;
  1  1880 M     Aaron   102 0.000861  0.0861         102
- 2  1881 M     Aaron    94 0.000868  0.0868          94
- 3  1882 M     Aaron    85 0.000697  0.0697          85
- 4  1883 M     Aaron   105 0.000934  0.0934         105
- 5  1884 M     Aaron    97 0.000790  0.0790          97
- 6  1885 M     Aaron    88 0.000759  0.0759          88
- 7  1886 M     Aaron    86 0.000722  0.0722          86
- 8  1887 M     Aaron    78 0.000714  0.0714          78
- 9  1888 M     Aaron    90 0.000693  0.0693          90
-10  1889 M     Aaron    85 0.000714  0.0714          85
+ 2  1881 M     Aaron    94 0.000868  0.0868          -8
+ 3  1882 M     Aaron    85 0.000697  0.0697          -9
+ 4  1883 M     Aaron   105 0.000934  0.0934          20
+ 5  1884 M     Aaron    97 0.000790  0.0790          -8
+ 6  1885 M     Aaron    88 0.000759  0.0759          -9
+ 7  1886 M     Aaron    86 0.000722  0.0722          -2
+ 8  1887 M     Aaron    78 0.000714  0.0714          -8
+ 9  1888 M     Aaron    90 0.000693  0.0693          12
+10  1889 M     Aaron    85 0.000714  0.0714          -5
 # ℹ 128 more rows
 ```
 
@@ -825,7 +825,7 @@ random_years &lt;- most_common_name_each_year %&gt;%
 # Extracting names vector
 random_years %&gt;%
   pull(most_common_name) 
-[1] "Sophia" "Robert" "James"  "Jacob"  "John"  
+[1] "James"   "John"    "Jacob"   "Sophia"  "Michael"
 ```
 
 
@@ -949,7 +949,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_43f7571d" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_83258c46" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
