--- a/public/courses/stat120/week3/index.html
+++ b/public/courses/stat120/week3/index.html
@@ -53,7 +53,8 @@
     
   
   <meta name="description" content="Day 6 Slides (html)
-Day 7 Slides (html)" />
+Day 7 Slides (html)
+Day 8 Slides (html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat120/week3/" />
@@ -298,7 +299,8 @@ Day 7 Slides (html)" />
   <meta property="og:url" content="/courses/stat120/week3/" />
   <meta property="og:title" content="Week 3 | Deepak Bastola" />
   <meta property="og:description" content="Day 6 Slides (html)
-Day 7 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Day 7 Slides (html)
+Day 8 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -796,6 +798,7 @@ Day 7 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b
           <div class="article-style">
             <p>Day 6 Slides (<a href="/stat120/Day6.html" target="_blank">html</a>)</p>
 <p>Day 7 Slides (<a href="/stat120/Day7.html" target="_blank">html</a>)</p>
+<p>Day 8 Slides (<a href="/stat120/Day8.html" target="_blank">html</a>)</p>
 
           </div>
 
