--- a/static/stat120/Day8.html
+++ b/static/stat120/Day8.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- September 26 2023
+ January 18 2024
 
 ---
 
@@ -332,12 +332,12 @@ X &lt;- c(20,24,19,23,22,16)
 	** Bootstrap interval for mean 
 
  Observed  X : 20.66667 
- Mean of bootstrap distribution: 20.67758 
- Standard error of bootstrap distribution: 1.08735 
+ Mean of bootstrap distribution: 20.66233 
+ Standard error of bootstrap distribution: 1.09957 
 
  Bootstrap percentile interval
     2.5%    97.5% 
-18.50000 22.66667 
+18.33333 22.66667 
 
 		*--------------*
 ```
@@ -397,12 +397,12 @@ class: action
 &lt;br&gt;
 .bq[
 
-Please go over the class activity and [class helper page](https://stat120-fall23.netlify.app/) and let me know if you have any questions.
+Please go over the class activity and [class helper page](https://stat120-winter24.netlify.app/) and let me know if you have any questions.
 
 ]
 ]
 
-<div class="countdown" id="timer_203d9d1d" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_62631a2e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
