--- a/public/courses/stat220/cheatsheets/index.html
+++ b/public/courses/stat220/cheatsheets/index.html
@@ -55,6 +55,7 @@
   <meta name="description" content="R markdown Cheatsheet
 ggplot2 Cheatsheet
 dplyr Cheatsheet
+tidyr Cheatsheet
 lubridate Cheatsheet
 stringr Cheatsheet
 regex Cheatsheet
@@ -307,6 +308,7 @@ leaflet Cheatsheet" />
   <meta property="og:description" content="R markdown Cheatsheet
 ggplot2 Cheatsheet
 dplyr Cheatsheet
+tidyr Cheatsheet
 lubridate Cheatsheet
 stringr Cheatsheet
 regex Cheatsheet
@@ -819,6 +821,7 @@ leaflet Cheatsheet" /><meta property="og:image" content="/media/icon_hua2ec155b4
             <p><a href="/cheatsheets/rmarkdown-2.0.pdf" target="_blank">R markdown Cheatsheet</a></p>
 <p><a href="/cheatsheets/data-visualization.pdf" target="_blank"><code>ggplot2</code> Cheatsheet</a></p>
 <p><a href="/cheatsheets/data-transformation.pdf" target="_blank"><code>dplyr</code> Cheatsheet</a></p>
+<p><a href="/cheatsheets/tidyr.pdf" target="_blank"><code>tidyr</code> Cheatsheet</a></p>
 <p><a href="/cheatsheets/lubridate.pdf" target="_blank"><code>lubridate</code> Cheatsheet</a></p>
 <p><a href="/cheatsheets/strings.pdf" target="_blank"><code>stringr</code> Cheatsheet</a></p>
 <p><a href="/cheatsheets/regex.pdf" target="_blank"><code>regex</code> Cheatsheet</a></p>
